--- a/src/ZeroChat.Client.Wpf/MainWindow.xaml
+++ b/src/ZeroChat.Client.Wpf/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:vm="clr-namespace:ZeroChat.Client.Wpf.ViewModels"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type={x:Type vm:ApplicationViewModel}}"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow"
+        Height="450"
+        Width="800">
     <Window.Resources>
         <DataTemplate x:Key="ChannelHeaderDataTemplate"
                       DataType="{x:Type vm:ChannelViewModel}">
@@ -14,6 +16,16 @@
         </DataTemplate>
         <DataTemplate x:Key="ChannelContentDataTemplate"
                       DataType="{x:Type vm:ChannelViewModel}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="1">
+                    <TextBox Text="{Binding ComposingText}" />
+                    <Button Command="{Binding ComposeMessageCommand}" IsDefault="True">Send</Button>
+                </StackPanel>
+            </Grid>
         </DataTemplate>
     </Window.Resources>
     <Grid>
