--- a/src/ZeroChat.Client.Wpf/MainWindow.xaml
+++ b/src/ZeroChat.Client.Wpf/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ZeroChat.Client.Wpf.MainWindow"
+﻿<Window x:Class="ZeroChat.Client.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:ZeroChat.Client.Wpf.ViewModels"
+        xmlns:vm="clr-namespace:ZeroChat.Client.ViewModels"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type={x:Type vm:ApplicationViewModel}}"
         Title="MainWindow"
