--- a/src/ZeroChat.Client.Wpf/MainWindow.xaml
+++ b/src/ZeroChat.Client.Wpf/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:ZeroChat.Client.ViewModels"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type={x:Type vm:ApplicationViewModel}}"
-        Title="MainWindow"
+        Title="ZeroChat"
         Height="450"
         Width="800">
     <Window.Resources>
